Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -883,12 +883,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "objeto_zip = zip([1, 2, 3])\n",
+        "objeto_zip"
+      ],
       "metadata": {
-        "id": "QFamB78s-TW_"
+        "id": "QFamB78s-TW_",
+        "outputId": "d8d332ef-683d-491a-b59e-ce799e52d5f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<zip at 0x78fa457e6800>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1323,25 +1341,9 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "lista = [16, 14, 63, 65, 17, 99, 70, 11, 20, 48, 79, 32, 17, 89, 12, 25, 66]\n",
-        "# 1. Leer el tamaño de la lista\n",
-        "# 2. Leer el valor máximo y mínimo\n",
-        "# 3. Calcular la suma de los valores de la lista\n",
-        "# 4. Mostrar un mensaje al final: La lista tiene `tamano` números, donde el mayor\n",
-        "# es `mayor` y el menor es `menor`. La suma de los valores es `suma`."
-      ],
-      "metadata": {
-        "id": "DO2ubP9N9D_2"
-      },
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "iKWvgNxs8G_m"
+        "id": "DO2ubP9N9D_2"
       },
       "execution_count": null,
       "outputs": []
@@ -1380,575 +1382,9 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "Compras = [2172.54, 3701.35, 3518.09, 3456.61, 3249.38, 2840.82, 3891.45, 3075.26, 2317.64, 3219.08]"
-      ],
+      "source": [],
       "metadata": {
         "id": "4hco1Zqy88Kw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "Compras"
-      ],
-      "metadata": {
-        "id": "yssMl9hOwF-e",
-        "outputId": "1bb2f6e7-1413-45f2-9dd9-6ee260ca62bf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[2172.54,\n",
-              " 3701.35,\n",
-              " 3518.09,\n",
-              " 3456.61,\n",
-              " 3249.38,\n",
-              " 2840.82,\n",
-              " 3891.45,\n",
-              " 3075.26,\n",
-              " 2317.64,\n",
-              " 3219.08]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "len(Compras)"
-      ],
-      "metadata": {
-        "id": "_6jY1bt1wKGB",
-        "outputId": "d178b65e-ecc4-45bc-89b4-a342d9a8777d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "10"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "prom = sum(Compras)/len(Compras)\n",
-        "prom"
-      ],
-      "metadata": {
-        "id": "vaweT5_JwQDC",
-        "outputId": "87d09577-35da-4179-8455-8bc3e18d50ad",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3144.222"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for elemento in Compras:\n",
-        "   elemento > 3000\n",
-        "   mayores = 0\n",
-        "   mayores = mayores + elemento\n",
-        "   print(mayores)"
-      ],
-      "metadata": {
-        "id": "ea230atNxCPx",
-        "outputId": "ffc36a81-4c58-4e98-db21-904a9f3fbb36",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2172.54\n",
-            "3701.35\n",
-            "3518.09\n",
-            "3456.61\n",
-            "3249.38\n",
-            "2840.82\n",
-            "3891.45\n",
-            "3075.26\n",
-            "2317.64\n",
-            "3219.08\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for elemento in Compras:\n",
-        "\n",
-        "   if elemento > 3000:\n",
-        "   mayores = 0\n",
-        "   mayores = mayores + elemento\n",
-        "   print(mayores)"
-      ],
-      "metadata": {
-        "id": "27LoOEwmynwg",
-        "outputId": "c6fc86dc-5526-4845-80c2-a069f4bbac2b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "expected an indented block after 'if' statement on line 3 (<ipython-input-12-6135ee8c2fb7>, line 4)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-6135ee8c2fb7>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    mayores = 0\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 3\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for elemento in Compras:\n",
-        "   if elemento > 3000:\n",
-        "     #mayores = 0\n",
-        "     mayores = mayores + elemento\n",
-        "     print(mayores)"
-      ],
-      "metadata": {
-        "id": "R3-y3bOx_u5_",
-        "outputId": "bef5d78f-84a0-42fe-8c38-2b0131bbba3d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "6920.43\n",
-            "10438.52\n",
-            "13895.130000000001\n",
-            "17144.510000000002\n",
-            "21035.960000000003\n",
-            "24111.22\n",
-            "27330.300000000003\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "mayores = 0\n",
-        "cont = 0\n",
-        "for elemento in Compras:\n",
-        "   if elemento > 3000:\n",
-        "     #mayores = 0\n",
-        "     cont = cont + 1\n",
-        "     mayores = mayores + elemento\n",
-        "     print(mayores)\n",
-        "     print(cont)\n",
-        "     porcentaje = (mayores/sum(Compras))*100\n",
-        "     print(porcentaje)\n",
-        "     print(f'El porcentaje de las compras mayores a $3.000 es {round(porcentaje,2)}%')"
-      ],
-      "metadata": {
-        "id": "I4mm3iCEAa2c",
-        "outputId": "f39875e7-0987-4709-abaf-f563a6f35141",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3701.35\n",
-            "1\n",
-            "11.771910507591384\n",
-            "El porcentaje de las compras mayores a $3.000 es 11.77%\n",
-            "7219.4400000000005\n",
-            "2\n",
-            "22.960974129689316\n",
-            "El porcentaje de las compras mayores a $3.000 es 22.96%\n",
-            "10676.050000000001\n",
-            "3\n",
-            "33.95450448473422\n",
-            "El porcentaje de las compras mayores a $3.000 es 33.95%\n",
-            "13925.43\n",
-            "4\n",
-            "44.288952879281425\n",
-            "El porcentaje de las compras mayores a $3.000 es 44.29%\n",
-            "17816.88\n",
-            "5\n",
-            "56.66546446147886\n",
-            "El porcentaje de las compras mayores a $3.000 es 56.67%\n",
-            "20892.14\n",
-            "6\n",
-            "66.44613516475617\n",
-            "El porcentaje de las compras mayores a $3.000 es 66.45%\n",
-            "24111.22\n",
-            "7\n",
-            "76.68421631805896\n",
-            "El porcentaje de las compras mayores a $3.000 es 76.68%\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "mayores = 0\n",
-        "cont = 0\n",
-        "for elemento in Compras:\n",
-        "     #mayores = 0\n",
-        "     cont += 1\n",
-        "     mayores += elemento\n",
-        "if elemento > 3000:\n",
-        "     #print(mayores)\n",
-        "     #print(cont)\n",
-        "     porcentaje = (mayores/sum(Compras))*100\n",
-        "     #print(porcentaje)\n",
-        "     print(f'El porcentaje de las compras mayores a $3.000 es {round(porcentaje,2)}%')\n",
-        "else:\n",
-        "     print('No hay compras mayores a $3.000')"
-      ],
-      "metadata": {
-        "id": "gO8K4PGHGCb0",
-        "outputId": "0e364393-7818-4fa3-8666-4a8a3a7e5daf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "El porcentaje de las compras mayores a $3.000 es 100.0%\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "mayores = 0\n",
-        "cont = 0\n",
-        "for elemento in Compras:\n",
-        "   if elemento > 3000:\n",
-        "     #mayores = 0\n",
-        "     cont = cont + 1\n",
-        "     mayores = mayores + elemento\n",
-        "     #print(mayores)\n",
-        "     #print(cont)\n",
-        "\n",
-        "porcentaje = (mayores/sum(Compras))*100\n",
-        "#print(porcentaje)\n",
-        "print(f'El porcentaje de las compras mayores a $3.000 es {round(porcentaje,2)}%')"
-      ],
-      "metadata": {
-        "id": "6njnYSOLJVS8",
-        "outputId": "d3e71c99-960f-4e37-ee8a-a2bd6a7d6dc3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "El porcentaje de las compras mayores a $3.000 es 76.68%\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "7tp4HvUmLJP9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "M9sATs1RK_Hu"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "--VnjpURJSI9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "qduWMZWnHu0s"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "c4DL1hkpHYZu"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yBOlsjpcHSVr"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "J4zfP6GqHO4U"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "c7OgvN3_G_pz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "RJwhBHmbGzqM"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "5pcSSD8lF12T"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yK9WMjDvEk0z"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "3Q5_o35XEeNa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "sMCZxWLoEWgs"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "0lhIYmEFEBsT"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "EunsKaBFD5kF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "BpcmTEmqD0mU"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "tuKxdpyCC1G6"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ShARELihCwf8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "8XkbP3hbCp3L"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "7lkxFZrYBxvw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "SDVFnc4rABMM"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "HQpP-7c-yaBo"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "jBgtF4i2yR_I"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "5EuFScZWyBGZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Qy67WnPPx8t8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "su"
-      ],
-      "metadata": {
-        "id": "PfAnNryQw80c"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "80RB64yCwfgJ"
       },
       "execution_count": null,
       "outputs": []
