Se creó con Colab

--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -302,7 +302,7 @@
       "metadata": {
         "id": "WQ-pCgdaMOlc"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1318,12 +1318,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "id = [1, 2, 3, 4, 5]\n",
+        "region = [\"Norte\", \"Oriente\", \"Sudeste\", \"Centro\", \"Sur\"]\n",
+        "\n",
+        "mapa = list(zip(id, region))\n",
+        "mapa"
+      ],
       "metadata": {
-        "id": "GuTwYw8NLNST"
+        "id": "GuTwYw8NLNST",
+        "outputId": "f1496f53-097a-4175-8585-61bab95a023c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(1, 'Norte'), (2, 'Oriente'), (3, 'Sudeste'), (4, 'Centro'), (5, 'Sur')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
