Se creó con Colab

--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -154,9 +154,100 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "id = [1, 2, 3, 4, 5]\n",
+        "region = [\"Norte\", \"Oriente\", \"Sudeste\", \"Centro\", \"Sur\"]\n",
+        "\n",
+        "mapa = list(zip(id, region))\n",
+        "mapa"
+      ],
+      "metadata": {
+        "id": "hme-WlDYM-Od",
+        "outputId": "bf15929d-8c82-41d4-f7de-9c1fadacd9d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(1, 'Norte'), (2, 'Oriente'), (3, 'Sudeste'), (4, 'Centro'), (5, 'Sur')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "codigos = [\"1000\", \"1001\", \"1002\", \"1003\", \"1004\", \"1005\"]\n",
+        "frutas = [\"manzana\", \"uva\", \"banana\", \"naranja\"]\n",
+        "\n",
+        "mercancia = list(zip(codigos, frutas))\n",
+        "mercancia"
+      ],
+      "metadata": {
+        "id": "uVCOvrLMzvEa",
+        "outputId": "690863d3-0912-45df-d785-129dbc0470e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('1000', 'manzana'), ('1001', 'uva'), ('1002', 'banana'), ('1003', 'naranja')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tupla_iterable = [('J392', 'Juan'), ('M890', 'Maria'), ('J681', 'José'), ('C325', 'Claudia'), ('A49', 'Ana')]\n",
+        "ids, nombres = zip(*tupla_iterable)\n",
+        "\n",
+        "ids = list(ids)\n",
+        "nombres = list(nombres)\n",
+        "\n",
+        "print(\"IDs = \", ids)\n",
+        "print(\"Nombres = \", nombres)"
+      ],
+      "metadata": {
+        "id": "jVSs6RSOz4eJ",
+        "outputId": "a3e75030-496d-4ee9-f08b-be4842cc8525",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "IDs =  ['J392', 'M890', 'J681', 'C325', 'A49']\n",
+            "Nombres =  ['Juan', 'Maria', 'José', 'Claudia', 'Ana']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "hme-WlDYM-Od"
+        "id": "kRKitvsn0Dnn"
       },
       "execution_count": null,
       "outputs": []
@@ -1318,33 +1409,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "id = [1, 2, 3, 4, 5]\n",
-        "region = [\"Norte\", \"Oriente\", \"Sudeste\", \"Centro\", \"Sur\"]\n",
-        "\n",
-        "mapa = list(zip(id, region))\n",
-        "mapa"
-      ],
+      "source": [],
       "metadata": {
-        "id": "GuTwYw8NLNST",
-        "outputId": "f1496f53-097a-4175-8585-61bab95a023c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "GuTwYw8NLNST"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[(1, 'Norte'), (2, 'Oriente'), (3, 'Sudeste'), (4, 'Centro'), (5, 'Sur')]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
